Mon Oct  9 12:18:15 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsconvert.h include/tdsodbc.h src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/tds/convert.c:
	* src/tds/query.c src/tds/tds_willconvert.h:
	- applied patch from Jason Borden for bigint support (updated)
	- add code for handle prepared statement (some stuff are commented,
	  because not so good and tested)

Mon Oct  9 10:35:35 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: fix problem compiling with odbc and relative directory

Tue Oct  8 21:10:02 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* samples/odbc.ini:
	- Update sample odbc.ini with new installation path.

Mon Oct  8 21:21:49 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/faq.html: updated

Mon Oct  8 20:56:14 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am: fix make dist

Tue Oct  8 10:59:58 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0022.c:
	- If we don't see the output parameter from the server,
	  print an error message instead of crashing.

Tue Oct  8 10:42:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Add some CFLAGS on OSF1 hosts that are required to set the
	  build environment properly.

Mon Oct  8 09:55:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: do not overwrite correct hostname

Mon Oct  7 21:24:32 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/tds/config.c	better logging for TDSDUMPCONFIG
	
Mon Oct  7 16:53:44 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/dblib/dblib.c src/odbc/odbc.c:
	- Use AC_GNU_SOURCE in configure.in instead of defining
	  _GNU_SOURCE ourselves.

Mon Oct  7 22:03:26 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/t0004.c: correct test

Mon Oct  7 14:54:36 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* missing:
	- Update missing script from autoconf-2.54.
