@@ -1,0 +1,28 @@
+#
+# $Id: unixodbc.jdbc.datasource.template,v 1.1 2002/10/09 17:05:44 castellano Exp $
+#
+# FreeTDS - Library of routines accessing Sybase and Microsoft databases
+# Copyright (C) 1998-1999  Brian Bruns
+#
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Library General Public
+# License as published by the Free Software Foundation; either
+# version 2 of the License, or (at your option) any later version.
+#
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Library General Public License for more details.
+#
+# You should have received a copy of the GNU Library General Public
+# License along with this library; if not, write to the
+# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+#
+[JDBC]
+Driver		= FreeTDS
+Description	= Sybase JDBC Server
+Trace		= No
+Servername	= JDBC
+Database	= pubs2
+UID		= guest
